force-app/main/default/objects/Case/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>As requested through CTASK0026172 - with approval from Matt Shaw.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Date of Birth (PE)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>