force-app/main/default/objects/Case/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>As requested through CTASK0026172 - with approval from Matt Shaw.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>First Name (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>