force-app/main/default/objects/Case/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>As requested through CTASK0026172 - with approval from Matt Shaw.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gender</label>
    <length>1</length>
    <type>Text</type>
</CustomField>