force-app/main/default/objects/Case/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <description>This *post code* field is created for capturing address for Awareness Kit data requirement</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Post Code (PE)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>