force-app/main/default/objects/Case/fields/Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Date__c</fullName>
    <description>This field stores Purchased date entered on Register Product Page</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Purchased Date</label>
    <type>Date</type>
</CustomField>