force-app/main/default/objects/Case/fields/State_Region__c.field-meta.xml
<CustomField>
    <fullName>State_Region__c</fullName>
    <description>This *state region* field is created for capturing address for Awareness Kit data requirement. Possible value will be State or Region.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>State Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>