force-app/main/default/objects/Case/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>This *street address* field is created for capturing address for Awareness Kit data requirement</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Street Address (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>