force-app/main/default/objects/Case/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <description>As requested through CTASK0026172 - with approval from Matt Shaw.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Suburb (PE)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>