force-app/main/default/objects/Case/fields/SuppliedEmail_SPE__c.field-meta.xml
<CustomField>
    <fullName>SuppliedEmail_SPE__c</fullName>
    <description>Encrypted Web Email (PE) For patient</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Web Email (PE)</label>
    <type>Email</type>
</CustomField>