force-app/main/default/objects/Case/fields/SuppliedPhone_SPE__c.field-meta.xml
<CustomField>
    <fullName>SuppliedPhone_SPE__c</fullName>
    <description>Encrypted Web Phone(PE) For patient</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Web Phone (PE)</label>
    <type>Phone</type>
</CustomField>