force-app/main/default/objects/Case/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>As requested through CTASK0026172 - with approval from Matt Shaw.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>